--- a/FIMExtensions/OTPWebClient/Web.config
+++ b/FIMExtensions/OTPWebClient/Web.config
@@ -56,7 +56,7 @@
       </source>
     </sources>
     <sharedListeners>
-      <add initializeData="C:\logs\App_tracelog.svclog" type="System.Diagnostics.XmlWriterTraceListener, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" name="NewListener" traceOutputOptions="LogicalOperationStack">
+      <add initializeData="C:\logs\OTPWebPortal.svclog" type="System.Diagnostics.XmlWriterTraceListener, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" name="NewListener" traceOutputOptions="LogicalOperationStack">
         <filter type="" />
       </add>
     </sharedListeners>
