Update impersonation on OTP gate & fix bug where registration data is null (no longer throws exception)

--- a/FIMExtensions/FIM2010 Sample AuthN Activity/FIM2010 Sample OTP Activity.csproj
+++ b/FIMExtensions/FIM2010 Sample AuthN Activity/FIM2010 Sample OTP Activity.csproj
@@ -121,6 +121,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.DirectoryServices.AccountManagement" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web" />
     <Reference Include="System.Workflow.Activities" />
     <Reference Include="System.Workflow.ComponentModel" />
